Add Java 17+ compatibility support